# IIDX-NFC-Controller

./: CMakeLists.txt  README.md  SilverIIDX.uf2
build_uf2/: Pico_Game_Controller.uf2
src/: CMakeLists.txt  board_defs.h  controller_config.h  controller_simulator.cpp  controller_simulator.h  main.c  main.cpp  nfc.c  nfc_defs.h  pico_game_controller.c  psxSPI.pio  tusb_config.h  usb_descriptors.c  usb_descriptors.h
src/nfc/: nfc.c  nfc.h
src/rgb/: turbocharger.c
